[package]
name = "crackme"
version = "0.1.0"
edition = "2021"
default-run = "crackme"

[profile.release]
panic = "abort"
opt-level = "z"
debug = "none"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[dependencies]
winapi = {version = "0.3.9", features = ["memoryapi", "sysinfoapi", "impl-default"] }
